# wilson2

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  abilitiesmanager.cpp  abilitiesmanager.h  abilityinterface.cpp  abilityinterface.h  main.cpp  qbot.cpp  qbot.h
src/abilities/: CMakeLists.txt  dollar.cpp  dollar.h  repeater.cpp  repeater.h
